@@ -2157,3 +2157,5 @@ BibLaTeX_mode=BibLaTeX_mode
 Optional_fields_2=Optional_fields_2
 Please_wait=Please_wait
 Waiting_for_save_operation_to_finish=Waiting_for_save_operation_to_finish
+Resolving_duplicate_BibTeX_keys...=Resolving_duplicate_BibTeX_keys...
+Finished_resolving_duplicate_BibTeX_keys._%0_entries_modified.=Finished_resolving_duplicate_BibTeX_keys._%0_entries_modified.
