@@ -1,3 +1,5 @@
+    - Added new feature (Tools -> Scan database... -> Resolve duplicate BibTeX keys) to
+      search for duplicate keys and offer to generate new keys to resolve the duplicates.
     - Added check that ensures that application doesn't quit while a large save operation
       is still in progress. Shows wait message with cancel button.
     - Added apostrophe (') as illegal character in BibTeX keys.
